[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "querykeys"
version = "1.0.0"
description = "Elite Polymarket Prediction & Automated Trading Bot"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "sqlalchemy>=2.0.27",
    "aiosqlite>=0.19.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "anthropic>=0.25.0",
    "vaderSentiment>=3.3.2",
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.3.0",
    "xgboost>=2.0.3",
    "catboost>=1.2.3",
    "pandas>=2.2.0",
]

[project.scripts]
querykeys        = "scripts.run_bot:main"
querykeys-dash   = "scripts.run_dashboard:main"
querykeys-bt     = "scripts.run_backtest:run_backtest"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
